syntax = "proto3";

package account_service;

service AccountService {
    rpc CreateAccount (AccountRequest) returns (AccountReply) {}
    rpc DeleteAccount (AccountRequest) returns (AccountReply) {}
}

message AccountRequest {
    string username = 1;
    string password = 2;
}

message AccountReply {
    string message = 1;
    User user = 2;
    string token =3;
}

message User {
    string username = 1;
    int64 id = 2;
}